src/objects/Recepie__c.object
<CustomObject>
    <fields>
        <fullName>Cooking_Time__c</fullName>
        <label>Cooking Time</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuisine__c</fullName>
        <label>Cuisine</label>
        <picklist>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujrati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malvani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediterranian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mughlai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Grater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seekh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tandoor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_Quotient__c</fullName>
        <formula>Cooking_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Quotient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preparation_Steps__c</fullName>
        <label>Preparation Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appetizer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Recepie</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recepie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recepies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>